--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,6 @@
 footer {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	margin: 3rem auto 1rem;
 	justify-content: center;
@@ -7,5 +8,5 @@ footer {
 }
 
 footer a {
-	margin: 0 1rem;
+	margin: 1rem;
 }
